--- a/index.html
+++ b/index.html
@@ -82,13 +82,22 @@
    </header>
    
 
-  <nav>
-    <a href="index.html">首页</a>
-    <a href="baozhi.html">报纸</a>
-    <a href="wenzhang">文章</a>
-    <a href="Minecraft.html">Minecraft</a>
-    <a href="login.html">登录</a>
-    <a href="comic.html">漫画</a>
+    <nav id="v7">
+    <a id="v8" href="index.html">首页</a>
+    <a id="v9" href="login.html">登录</a>
+    <a id="v9" href="tougao.html">投稿</a>
+  </nav>
+  
+  
+  
+  
+  <nav id="v7">
+    
+    <a id="v9" href="wenzhang.html">文章</a>
+    <a id="v10" href="baozhi.html">报纸</a>
+    <a id="v11" href="comic.html">漫画专区</a>
+    <a id="v9" href="Minecraft.html">Minecraft</a>
+    <a id="v9" href="抽奖.html">抽奖</a>
   </nav>
 
   <main>
