--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>七一报社</title>
+  <title>一中报社</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -77,7 +77,7 @@
 
 <body>
   <header>
-    <h1>七一报社</h1>
+    <h1>一中报社</h1>
     <p>专注于校园生活</p>
    </header>
    
@@ -120,7 +120,7 @@
   </main>
 
   <footer>
-    <p>版权所有 &copy; 2023 七一报社</p>
+    <p>版权所有 &copy; 2023 一中报社</p>
   </footer>
 </body>
 
